--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,12 +268,12 @@ jobs:
             --template-file .circleci/files/database.yml \
             --tags project=AMRs-in-Warehouse-Systems \
             --stack-name "AMRs-in-Warehouse-Systems-webapplications-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --parameter-overrides ID="65${CIRCLE_WORKFLOW_ID:0:7}"
+            --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:5}"
       - run:
           name: Add database instance ip to ansible inventory
           command: |
             WEBAPPLICATIONS_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:5}" \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text)
             rm .circleci/ansible/inventory.txt
