--- a/.circleci/files/webapplications.yml
+++ b/.circleci/files/webapplications.yml
@@ -38,3 +38,26 @@ Resources:
           Value: !Sub webapplications-${ID}
         - Key: Project
           Value: AMRs-in-Warehouse-Systems
+
+  EC2Instance:
+    Type: AWS::EC2::Instance
+    Properties:
+      InstanceType: t2.micro
+          
+      SecurityGroupIds:
+        - sg-083b3df2f4969ce3e
+
+      # VpcId: vpc-0c907ea59099c91f7
+      # SubnetId: !Ref MySubnet
+      SubnetId: subnet-07faff1e39e91c29b
+          
+      KeyName: AMRs-in-Warehouse-Systems
+      # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
+      # Ubuntu 18 or higher works fine
+      ImageId: ami-0261755bbcb8c4a84
+
+      Tags:
+        - Key: Name
+          Value: !Sub database-${ID}
+        - Key: Project
+          Value: AMRs-in-Warehouse-Systems
