deploy database - fixes #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,7 @@ jobs:
             docker push eslamdyba/amrs-in-warehouse-systems:database-postgres-server-1.0
        
 
-  create-infrastructure:
+  configure-infrastructure-webappication:
     docker:
       - image: amazon/aws-cli
     steps:
@@ -288,45 +288,6 @@ jobs:
             - project/.circleci/ansible/inventory.txt
 
 
-  configure-infrastructure-database:
-    docker:
-      # Docker image here that supports Ansible
-      - image: cimg/base:stable
-    steps:
-      # Checkout code from git
-      - checkout
-      - install_awscli
-      - install_ansible
-      # Add ssh keys with fingerprint
-      - add_ssh_keys:
-          fingerprints: ["bb:a3:ce:80:fc:42:42:be:eb:01:22:fb:ed:0f:92:cd"]
-      # attach workspace
-      - attach_workspace:
-          at: ~/
-
-      - run:
-          name: Add database instance ip to ansible inventory
-          command: |
-            WEBAPPLICATIONS_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
-            rm .circleci/ansible/inventory.txt
-            echo [web] >> .circleci/ansible/inventory.txt
-            echo $WEBAPPLICATIONS_PUBLIC_IP >> .circleci/ansible/inventory.txt
-            cat .circleci/ansible/inventory.txt
-
-      - run:
-          name: Configure server
-          command: |
-            cat ~/project/.circleci/ansible/inventory.txt
-            export ANSIBLE_HOST_KEY_CHECKING=False
-            ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/configure-server.yml
-
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/.circleci/ansible/inventory.txt
   
   deploy-database:
     docker:
@@ -416,26 +377,23 @@ jobs:
 workflows:
   default:
     jobs:
-      # - build-frontend
-      # - build-backend
-      # - scan-backend:
-      #     requires: [build-backend]
-      # - scan-frontend:
-      #     requires: [build-frontend]
-      # - build-database:
-      #     requires: [scan-frontend, scan-backend]
-      - create-infrastructure
-          # requires: [scan-frontend, scan-backend]
-      # - configure-infrastructure:
-      #     requires: [create-infrastructure]
-      # - deploy-frontend:
-      #     requires: [configure-infrastructure]
-      - create-infrastructure-database:
+      - build-frontend
+      - build-backend
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - build-database:
+          requires: [scan-frontend, scan-backend]
+      - create-infrastructure:
+          requires: [scan-frontend, scan-backend, build-database]
+      - configure-infrastructure-webappication:
           requires: [create-infrastructure]
-          # requires: [deploy-frontend, build-database]
-      # - configure-infrastructure-database:
-      #     requires: [create-infrastructure-database]
-      # - deploy-database:
-      #     requires: [create-infrastructure-database]
+      - deploy-frontend:
+          requires: [configure-infrastructure]
+      - configure-infrastructure-database:
+          requires: [create-infrastructure]
+      - deploy-database:
+          requires: [configure-infrastructure-database]
       # - deploy-backend:
       #     requires: [deploy-database]
