echo weberver ip - fixes #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,6 +112,8 @@ jobs:
               --output text)   
             echo $DATBASE_PUBLIC_IP >> test.txt
             cat test.txt
+            echo $DATBASE_PUBLIC_IP
+            echo $DATBASE_PUBLIC_IP
 
       - run:
           name: Build docker image for backend
@@ -124,8 +126,14 @@ jobs:
             npm install
             cd ..
             cd ..   
+            DATBASE_PUBLIC_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text) 
             echo $DATBASE_PUBLIC_IP >> test.txt
             cat test.txt
+            echo $DATBASE_PUBLIC_IP
+            echo $DATBASE_PUBLIC_IP
             docker build -t eslamdyba/amrs-in-warehouse-systems:dashboard-backend-1.0 --build-arg POSTGRES_HOST=$DATBASE_PUBLIC_IP --build-arg POSTGRES_USER=$POSTGRES_USER --build-arg POSTGRES_DATABASE=$POSTGRES_DB --build-arg POSTGRES_PORT=$POSTGRES_PORT --build-arg POSTGRES_PASSWORD=$POSTGRES_PASSWORD .
       
       - run:
