echo weberver ip - fixes #5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
       - image: cimg/node:13.8.0
     steps:
       - checkout
+      - install_awscli
       - restore_cache:
           keys: [frontend-build-deps]
       - run:
