comment deployment part, finished GP discustion

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,17 +70,6 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
 
-      - run:
-          name: Build docker image for frontend
-          command: |
-            rm ~/project/dashboard-web-application/client/.env.local
-            echo REACT_APP_BASE_URL=http://
-            docker build -t eslamdyba/amrs-in-warehouse-systems:dashboard-1.0 .
-      - run:
-          name: Push docker image for frontend to dockerhub
-          command: |
-            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin  
-            docker push eslamdyba/amrs-in-warehouse-systems:dashboard-1.0
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build-deps
@@ -98,10 +87,7 @@ jobs:
           command: |
             cd dashboard-web-application
             cd client
-            WEBAPPLICATIONS_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=webapplications-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)
+            WEBAPPLICATIONS_PUBLIC_IP=dashboard-backend
             rm .env.local
             echo REACT_APP_BASE_URL=http://$WEBAPPLICATIONS_PUBLIC_IP:5000 >> .env.local
             echo $REACT_APP_BASE_URL
@@ -116,12 +102,12 @@ jobs:
       - run:
           name: Build docker image for frontend
           command: |
-            docker build -t eslamdyba/amrs-in-warehouse-systems:dashboard-1.0 .
+            docker build -t eslamdyba/amrs-in-warehouse-systems:dashboard-frontend-1.0 .
       - run:
           name: Push docker image for frontend to dockerhub
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin  
-            docker push eslamdyba/amrs-in-warehouse-systems:dashboard-1.0
+            docker push eslamdyba/amrs-in-warehouse-systems:dashboard-frontend-1.0
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build-deps
@@ -146,17 +132,17 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
 
-      - run:
-          name: get database server IP
-          command: |
-            DATBASE_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text)   
-            echo $DATBASE_PUBLIC_IP >> test.txt
-            cat test.txt
-            echo $DATBASE_PUBLIC_IP
-            echo $DATBASE_PUBLIC_IP
+      # - run:
+      #     name: get database server IP
+      #     command: |
+      #       DATBASE_PUBLIC_IP=$(aws ec2 describe-instances \
+      #         --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:7}" \
+      #         --query 'Reservations[*].Instances[*].PublicIpAddress' \
+      #         --output text)   
+      #       echo $DATBASE_PUBLIC_IP >> test.txt
+      #       cat test.txt
+      #       echo $DATBASE_PUBLIC_IP
+      #       echo $DATBASE_PUBLIC_IP
 
       - run:
           name: Build docker image for backend
@@ -169,13 +155,7 @@ jobs:
             npm install
             cd ..
             cd ..   
-            DATBASE_PUBLIC_IP=$(aws ec2 describe-instances \
-              --filters "Name=tag:Name,Values=database-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --output text) 
-            echo $DATBASE_PUBLIC_IP >> test.txt
-            cat test.txt
-            echo $DATBASE_PUBLIC_IP
+            DATBASE_PUBLIC_IP=dashboard-database 
             echo $DATBASE_PUBLIC_IP
             docker build -t eslamdyba/amrs-in-warehouse-systems:dashboard-backend-1.0 --build-arg POSTGRES_HOST=$DATBASE_PUBLIC_IP --build-arg POSTGRES_USER=$POSTGRES_USER --build-arg POSTGRES_DATABASE=$POSTGRES_DB --build-arg POSTGRES_PORT=$POSTGRES_PORT --build-arg POSTGRES_PASSWORD=$POSTGRES_PASSWORD .
       
@@ -243,7 +223,7 @@ jobs:
             npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical
 
-  build-database:
+  build-docker-image-database:
     docker:
       - image: cimg/node:13.8.0
     steps:
@@ -257,12 +237,12 @@ jobs:
             git clone https://github.com/eslamdyab21/AMRs-in-Warehouse-Systems.git
             cd AMRs-in-Warehouse-Systems
             git checkout feature/data/48
-            docker build -t eslamdyba/amrs-in-warehouse-systems:database-postgres-server-1.0 --build-arg POSTGRES_USER=$POSTGRES_USER --build-arg POSTGRES_DB=$POSTGRES_DB --build-arg POSTGRES_PASSWORD=$POSTGRES_PASSWORD -f docker-with-databases/Dockerfile .
+            docker build -t eslamdyba/amrs-in-warehouse-systems:dashboard-database-postgres-1.0 --build-arg POSTGRES_USER=$POSTGRES_USER --build-arg POSTGRES_DB=$POSTGRES_DB --build-arg POSTGRES_PASSWORD=$POSTGRES_PASSWORD -f docker-with-databases/Dockerfile .
       - run:
           name: Push docker image for database to dockerhub
           command: |
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin  
-            docker push eslamdyba/amrs-in-warehouse-systems:database-postgres-server-1.0
+            docker push eslamdyba/amrs-in-warehouse-systems:dashboard-database-postgres-1.0
        
 
   create-infrastructure:
@@ -517,23 +497,27 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
-      - build-database:
+      - build-docker-image-database:
           requires: [scan-frontend, scan-backend]
-      - create-infrastructure:
-          requires: [scan-frontend, scan-backend, build-database]
-      - configure-infrastructure-webappication:
-          requires: [create-infrastructure]
-      - deploy-frontend:
-          requires: [configure-infrastructure-webappication]
-      - configure-infrastructure-database:
-          requires: [create-infrastructure]
-      - deploy-database:
-          requires: [configure-infrastructure-database]
       - build-docker-image-backend:
-          requires: [deploy-database]
-      - deploy-backend:
-          requires: [build-docker-image-backend]
+          requires: [build-docker-image-database]
       - build-docker-image-frontend:
-          requires: [create-infrastructure]
-      - smoke-test:
-          requires: [deploy-backend]
+          requires: [build-docker-image-backend]
+      # - create-infrastructure:
+      #     requires: [scan-frontend, scan-backend, build-database]
+      # - configure-infrastructure-webappication:
+      #     requires: [create-infrastructure]
+      # - deploy-frontend:
+      #     requires: [configure-infrastructure-webappication]
+      # - configure-infrastructure-database:
+      #     requires: [create-infrastructure]
+      # - deploy-database:
+      #     requires: [configure-infrastructure-database]
+      # - build-docker-image-backend:
+      #     requires: [deploy-database]
+      # - deploy-backend:
+      #     requires: [build-docker-image-backend]
+      # - build-docker-image-frontend:
+      #     requires: [create-infrastructure]
+      # - smoke-test:
+      #     requires: [deploy-backend]
